MountPointManager: fix inability to deselect "Use MusicLocation"

...and also inability to clear the Local Collection if collection
folders are cleared.

BUGFIXES:
 * Fix inability to reverse "Use Music Location" decision and inability
   to clear database once all collection directories have been unset.

This patch is a candidate for inclusion into 2.7.1

BUG: 316216
FIXED-IN: 2.8